# vod-server

./: Cargo.toml  LICENSE
.specstory/: .project.json
.specstory/history/: 2025-04-26_08-29-修复项目错误的请求.md
src/: config.rs  error.rs  main.rs
src/handlers/: mod.rs  play.rs  upload.rs
src/services/: transcoder.rs
static/: player.html
uploads/oceans/: index.m3u8  index0.ts  index4.ts
